--- a/lab1.html
+++ b/lab1.html
@@ -46,15 +46,8 @@ p {
 <p>Codificação de Sinais Multimídia - Quadrimestre 3 de 2023</p>
 <p>-------------------------</p>
 
-  <p><a href= "lab1.html">Laboratório 1</a></p>
-  <p><a href= >Laboratório 2</a></p>
-  <p><a href= >Laboratório 3</a></p>
-  <p><a href= >Laboratório 4</a></p>
-  <p><a href= >Laboratório 5</a></p>
-  <p><a href= >Laboratório 6</a></p>
-  <p><a href= >Laboratório 7</a></p>
-  <p><a href= >Laboratório 8</a></p>
-  <p><a href= >Laboratório 9</a></p>
+  <p><a href="Juliana.html" >Juliana</a></p>
+
 
 
 
